admissionwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    service:
      name: pet2cattle-hook
      namespace: default
      path: "/mutate-core-openfeature-dev-v1alpha1-agentwebhook"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRQ3JMZWljdHZCRUdEQU5CZ2txaGtpRzl3MEJBUXNGQURBWU1SWXdGQVlEVlFRRERBMHgKT1RJdU1UWTRMakV1TVRFMk1CNFhEVEl5TURVeU5ESXdNVGd4T1ZvWERUUTVNVEF3T1RJd01UZ3hPVm93R0RFVwpNQlFHQTFVRUF3d05NVGt5TGpFMk9DNHhMakV4TmpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU9pUk9STWZVUjRtMWFnaHZPRmNudVczek4wQ1RPd3RNODFtQnEvMldrSzh2N1VNWEVwWjRKUkMKT25oMlZxMis0bXdFQk92UWpoUXlSYlRIVHNXVjRSSWIvdzRQb0NKcVZDalVIRE4rUnluQ3FyRmRsNks1ODV4UgpoSCtvN2IxcEhYTn [...]
  name: mapp.kb.io
  sideEffects: None
  admissionReviewVersions: ["v1", "v1beta1"]
